Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/pix-config-api-prd/pix-config-api-prd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pix-config-api-dev
  namespace: pix-config-api-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pix-config-api-dev
  template:
    metadata:
      labels:
        app: pix-config-api-dev
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: pix-config-api-dev
        image: "registry.pixeon.cloud/aurora/pix-config-api:latest"
        ports:
        - containerPort: 8086
          name: pix-config-api
---
apiVersion: v1
kind: Service
metadata:
  name: pix-config-api-dev
  namespace: pix-config-api-dev
spec:
  ports:
  - port: 8086
  selector:
    app: pix-config-api-dev
